regular error in particle placement when emitter is parented to an animated null #39984

Closed
opened 2014-05-01 18:18:21 +02:00 by stephen thomas · 10 comments

System Information
Mac OS 10.9.2
Nvidia GTX580
Nvidia GTX560Ti

Blender Version
cdc5d65 2.70

Worked: (optional)

Short description of error
When a particle emitter is parented to a null for animation, you get a regular displacement of a single particle. This has been tested on the latest build (downloaded yesterday) and the latest release candidate (2.7a), both have the same problem.

Exact steps for others to reproduce the error

  1. Add an empty object to the default scene, not in the same location as the default cube.
  2. Parent default cube to the empty.
  3. Set rotation keyframes on the empty.
  4. Add mesh to be used as particle object
  5. add particle system to default cube
  6. Assign a single vertex to a new vertex group on the default cube.
  7. remove all field weights, including gravity, so the particles don't move once created.
  8. set density to vertex group just created.
  9. Set render to 'Object' and select the particle object.
  10. Set all 'Velocity' values to 0
  11. Set Emission number: 5000
    Emit From: Verts
    Random: off
    Use Modifier Stack: on
  12. Set cache step: 1
  13. Bake the cache.
  14. A particle system is created as shown in the screen shot attached.
    Screen_Shot_2014-05-01_at_12.02.47.png

I assigned the same particle system to a cube that I duplicated from the original, unparenting from the empties and setting location keyframes on the object itself to get a similar motion to the original cube (bottom cube in screenshot). As you can see, the problem is only when the emitter is attached to an animated parent.

particle_test.blend

My system info:
system-info.txt

**System Information** Mac OS 10.9.2 Nvidia GTX580 Nvidia GTX560Ti **Blender Version** cdc5d65 2.70 Worked: (optional) **Short description of error** When a particle emitter is parented to a null for animation, you get a regular displacement of a single particle. This has been tested on the latest build (downloaded yesterday) and the latest release candidate (2.7a), both have the same problem. **Exact steps for others to reproduce the error** 1. Add an empty object to the default scene, not in the same location as the default cube. 2. Parent default cube to the empty. 3. Set rotation keyframes on the empty. 4. Add mesh to be used as particle object 5. add particle system to default cube 6. Assign a single vertex to a new vertex group on the default cube. 7. remove all field weights, including gravity, so the particles don't move once created. 8. set density to vertex group just created. 9. Set render to 'Object' and select the particle object. 10. Set all 'Velocity' values to 0 11. Set Emission number: 5000 Emit From: Verts Random: off Use Modifier Stack: on 12. Set cache step: 1 13. Bake the cache. 14. A particle system is created as shown in the screen shot attached. ![Screen_Shot_2014-05-01_at_12.02.47.png](https://archive.blender.org/developer/F86561/Screen_Shot_2014-05-01_at_12.02.47.png) I assigned the same particle system to a cube that I duplicated from the original, unparenting from the empties and setting location keyframes on the object itself to get a similar motion to the original cube (bottom cube in screenshot). As you can see, the problem is only when the emitter is attached to an animated parent. [particle_test.blend](https://archive.blender.org/developer/F86563/particle_test.blend) My system info: [system-info.txt](https://archive.blender.org/developer/F86564/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @stephenthomas

Added subscriber: @stephenthomas
Lukas Tönne was assigned by Bastien Montagne 2014-05-02 08:28:07 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Lukas, another one for you to triage. ;)

Lukas, another one for you to triage. ;)
Member

Looks like some kind of interpolation error (notice how it sort of deviates from the motion curve depending on the sub-frame). We've had similar issues relating to animated emitter parents, but this seems to be different (#39923 (particle emitter not emitting in the same frequency when being parented to an empty, or object with rigid body dynamics. ))

Looks like some kind of interpolation error (notice how it sort of deviates from the motion curve depending on the sub-frame). We've had similar issues relating to animated emitter parents, but this seems to be different (#39923 (particle emitter not emitting in the same frequency when being parented to an empty, or object with rigid body dynamics. ))

This issue was referenced by blender/blender-addons-contrib@6416979b45

This issue was referenced by blender/blender-addons-contrib@6416979b4598cdfddde2b916c01291a88bb7249a

This issue was referenced by 6416979b45

This issue was referenced by 6416979b4598cdfddde2b916c01291a88bb7249a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 6416979b45.

Closed by commit 6416979b45.
Author

Fantastic. Thank you guys :)

Fantastic. Thank you guys :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39984
No description provided.