Fix T39984: Interpolation errors in particle emitter animation.

Reverse child->parent order of particle emitter animation eval causes
artifacts when more than one parent level is used.